PROJECT(app)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(VERSION 1.0 CACHE STRING "Versão Actual")
SET(APP_NAME "MySQL/MariaDB JSON UDF Functions")
SET(APP_ORG "com.github.lflobo")

SET(CMAKE_MODULE_PATH ${app_SOURCE_DIR}/cmake)
FIND_PACKAGE(Jansson)

SUBDIRS(src)

INCLUDE_DIRECTORIES(${app_SOURCE_DIR} ${app_BINARY_DIR})

SET(LIBRARY_OUTPUT_PATH ${app_BINARY_DIR}/lib)